--- a/appz.yml
+++ b/appz.yml
@@ -9,10 +9,10 @@ build:
   output_files: output/*.zip
   image_template: gelfgen-0.3
 deploy:
-  context: sranjan1995/DEV
-  replicas: 1
+  context: jojin77/DEV
+  replicas: 3
 properties:
-  revision : 22
+  revision : 1
   TZ : Asia/Kolkata
   GELF_GRAYLOG_HOST : graylog-5-2.sranjan1995-dev
   GELF_GRAYLOG_PORT : 12201
